# AI-Recomendation-Engine

./: README.md  pyproject.toml  run.py
app/: main.py
app/services/: chroma_service.py  embedding_service.py  scraper_service.py
app/shared/: config.py  models.py  parser.py  utils.py
app/static/: index.html  script.js  style.css
chroma_db/: chroma.sqlite3
data/: shl_assessments.csv  shl_embeddings_payload.json
dataset/: test.csv  vansh_bhatnagar.csv
scripts/: batch_query.py
test/: api.py  embeddings_builder.py  scraper.py
