[project]
name = "shl-recommendation-engine"
version = "0.1.0"
description = "SHL product catalog scraper, embedding pipeline, and FastAPI recommendation service"
requires-python = ">=3.10"
readme = "README.md"
authors = [
    { name = "SHL Recommendation Team" }
]
dependencies = [
    "beautifulsoup4>=4.12.3",
    "chromadb>=0.4.22",
    "fastapi>=0.111.0",
    "httpx>=0.27.0",
    "pandas>=2.2.1",
    "pydantic>=2.8.2",
    "pydantic-settings>=2.0.0",
    "requests>=2.32.3",
    "sentence-transformers>=2.7.0",
    "uvicorn[standard]>=0.30.1",
]

